force-app/main/default/objects/PWChrono_Salary_History__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <label>Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary Slip Generated</fullName>
                <default>true</default>
                <label>Salary Slip Generated</label>
            </value>
            <value>
                <fullName>Annual Increment</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Performance Bonus</fullName>
            </value>
            <value>
                <fullName>Role Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>