force-app/main/default/objects/PWChrono_Salary_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Canonical employee Contact for this historical salary record.</description>
    <label>Employee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salary History</relationshipLabel>
    <relationshipName>PWChrono_Salary_History</relationshipName>
    <type>Lookup</type>
</CustomField>