force-app/main/default/objects/PWChrono_Salary_History__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Salary History</relationshipLabel>
    <relationshipName>Salary_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>