force-app/main/default/objects/PWChrono_Salary_History__c/fields/Salary_Slip__c.field-meta.xml
<CustomField>
    <fullName>Salary_Slip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salary Slip</label>
    <referenceTo>PWChrono_Salary_Slip__c</referenceTo>
    <relationshipLabel>Salary History</relationshipLabel>
    <relationshipName>Salary_History</relationshipName>
    <type>Lookup</type>
</CustomField>