force-app/main/default/objects/PWChrono_Salary_History__c/fields/Total_Allowances__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowances__c</fullName>
    <label>Total Allowances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>